# sramp

./: .gitignore  package.json  pnpm-lock.yaml
.github/workflows/: desktop-ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: media.rs  mod.rs  timeline.rs
apps/desktop/src-tauri/src/media/: mod.rs  probe.rs  proxy.rs  thumb.rs
apps/desktop/src-tauri/src/timeline/: mod.rs
apps/desktop/src/components/ui/: button.tsx
apps/desktop/src/features/media/: DragGhost.tsx  library.tsx  store.ts  tile.tsx
apps/desktop/src/features/preview/: Preview.tsx
apps/desktop/src/features/timeline/: Clip.tsx  Playhead.tsx  Ruler.tsx  Timeline.tsx  Track.tsx  store.ts
apps/desktop/src/lib/: ipc.ts  types.ts
apps/desktop/src/styles/: globals.css
docs/: STATE.md
scripts/: with-clean-target.sh
