[package]
name = "sramp-desktop"
version = "0.1.0"
description = "Speed-ramp video editor for car content."
authors = ["Sramp"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "sramp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync"] }
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
